[project]
name = "create-flask-app_codeyourfuture"
version = "0.0.1"
authors = [
    { name="Arsalan Mohseni", email="arsalandeveloper961@gmail.com" },
]
description = "A package that create a flask project for you"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/arsalanmohseni/create-flask-app"
Issues = "https://github.com/arsalanmohseni/create-flask-app/issues"
